# MyProjects

./: .gitignore  README.md
Library Management System/: CMakeLists.txt  README.md
Library Management System/include/: SQLiteWrapper.hpp
Library Management System/output/: CMakeLists.txt  LibraryDatabase.db
Library Management System/output/src/: main.cpp
Library Management System/source/: CMakeLists.txt
Library Management System/source/include/: Book.hpp  Menu.hpp  SQLiteWrapper.hpp  Table.hpp  User.hpp
Library Management System/source/src/: Book.cpp  Menu.cpp  SQLiteWrapper.cpp  Table.cpp  User.cpp
Library Management System/src/: Menu.cpp  Table.cpp  main.cpp
Library Management System/test/: CMakeLists.txt
Library Management System/test/src/: BookUnitTests.cpp
Other Tasks/Exceptions/: Exceptions_and_Namespaces.sln
Other Tasks/Exceptions/Exceptions_and_Namespaces/: Classes.h  Ex_Classes.h  Exceptions_and_Namespaces.cpp  Exceptions_and_Namespaces.vcxproj  Exceptions_and_Namespaces.vcxproj.filters  namespaces.h
Other Tasks/Friend functions/: Friend_functions_and_classes.sln
Other Tasks/Friend functions/Friend_functions_and_classes/: Friend_functions_and_classes.vcxproj  Friend_functions_and_classes.vcxproj.filters  friend_functions.h  main.cpp
Other Tasks/Memory/Memory_management/: Memory_management.sln
Other Tasks/Memory/Memory_management/Memory_management/: Copy-Array-Into-Two-Arrays.h  Copy-Array.h  Memory_management.vcxproj  Memory_management.vcxproj.filters  Merging-Arrays-Sequencially.h  Merging-Arrays.h  Reverse-Array.h  Swap-Arrays.h  main.cpp
Other Tasks/Memory/Tests/: ArrayTasks.sln
Other Tasks/Memory/Tests/ArrayTasks/: ArrayTasks.vcxproj  ArrayTasks.vcxproj.filters  Copy-Array.h  Copy-To-Two_Arrays.h  Main.cpp  Merge-Arrays.h  Merge-Arrays_Sequencially.h  Reversed-Array.h  Swap-Arrays.h
Other Tasks/Memory/Tests/Tests/: Tests.vcxproj  test.cpp
Other Tasks/Object Oriented Programming/: OOP.sln
Other Tasks/Object Oriented Programming/OOP/: OOP.vcxproj  OOP.vcxproj.filters  date_storage_class.h  group_of_students_class.h  main.cpp  shape_class.h  string_class.h  student_class.h  vector_class.h
Other Tasks/STL/: STL-Tasks.sln
Other Tasks/STL/STL-Tasks/: AbsoluteMax.h  Config_Output.txt  ConfigurationFile.txt  ConfigurationTask.h  InputDiff.txt  NumberOfDiffNums.h  RemoveDuplicates.h  STL-Tasks.vcxproj  STL-Tasks.vcxproj.filters  main.cpp  real_file.h  string_analyzer.h  string_provider.h
Other Tasks/STL/STL-Tests/: STL-Tests.vcxproj  fake_file_abs.h  fake_file_config.h  fake_file_diff.h  fake_file_rmv.h  test.cpp
Other Tasks/Templates - Matrix Class/: Templates.sln
Other Tasks/Templates - Matrix Class/Templates/: Matrix_Template.h  Templates.vcxproj  Templates.vcxproj.filters  templates.cpp
Snake Game/: CMakeLists.txt  Makefile  README.md
Snake Game/include/: Console.hpp  Game.hpp
Snake Game/src/: Console.cpp  Game.cpp  main.cpp
Srt Parser Project/: CMakeLists.txt  README.md  SrtParser.sln
Srt Parser Project/SrtParser/: Output.txt  SrtBase.h  SrtParser.vcxproj  SrtParser.vcxproj.filters  SrtParserFakeFIle.h  SrtParserRealFile.h  TestOutput.txt  main.cpp
Srt Parser Project/SrtParserTest/: SrtParserTest.vcxproj  UnitTests.cpp
Srt Parser Project/output/: CMakeLists.txt  TestInput.srt
Srt Parser Project/output/src/: main.cpp
Srt Parser Project/source/: CMakeLists.txt
Srt Parser Project/source/include/: SrtBase.hpp  SrtParserFakeFile.hpp  SrtParserRealFile.hpp
Srt Parser Project/source/src/: SrtBase.cpp  SrtParserFakeFile.cpp  SrtParserRealFile.cpp
Srt Parser Project/test/: CMakeLists.txt
Srt Parser Project/test/src/: UnitTests.cpp
Test/: CMakeLists.txt  main.cpp
Vending Machine/: CMakeLists.txt  README.md  Vending_Machine.sln
Vending Machine (Python)/: CMakeLists.txt  Vending_Machine_P.sln
Vending Machine (Python)/Vending_Machine_P/: Controller_Class.py  Display_Class.py  Feeder_Class.py  Vending_Machine_P.py  Vending_Machine_P.pyproj
Vending Machine (Python)/source/: Controller.py  Display.py  Feeder.py  VendingMachine.py  main.py
Vending Machine/Vending_Machine/: Controller_Class.h  Display_Class.h  Exception_Classes.h  Feeder_Class.h  Vending_Machine.vcxproj  Vending_Machine.vcxproj.filters  Vending_Machine_Class.h  main.cpp
Vending Machine/output/: CMakeLists.txt
Vending Machine/output/src/: main.cpp
Vending Machine/source/: CMakeLists.txt
Vending Machine/source/include/: Controller.hpp  Display.hpp  Exceptions.hpp  Feeder.hpp  VendingMachine.hpp
Vending Machine/source/src/: Controller.cpp  Display.cpp  Feeder.cpp  VendingMachine.cpp
